--- a/page/css/pages/index.css
+++ b/page/css/pages/index.css
@@ -5,6 +5,9 @@
     display: flex;
     align-items: center;
     height: 90vh;
+    background-position: center;
+    background-size: cover;
+    transition: 1s;
 }
 
 #section1 .tema{
