--- a/page/css/components/classes.css
+++ b/page/css/components/classes.css
@@ -13,7 +13,7 @@
     margin: 5px;
     padding: 10px 40px;
     border-radius: 5px;
-    font-weight: bolder;
+    font-weight:900;
     border: none;
     cursor: pointer;
 }
@@ -33,5 +33,5 @@
 
 /**********CONTAINER********/
 .container{
-    padding:100px;
+    padding:100px 100px;
 }
