--- a/page/css/responsivo/responsivo.css
+++ b/page/css/responsivo/responsivo.css
@@ -1,50 +1,32 @@
-/**********TABLET************/
+/*********HEADER*********/
 
-@media(max-width:1000px){
+/*WEB*/
+@media(min-width:1000px){
+    header{
+        padding: 10px 100px;
+    }
+}
+
+/*TABLET*/
+@media(max-width:1000px){    
     header{
         padding: 10px 50px;
     }
     header .inscricao{
         display: none;
     }
-
-    .container{
-        padding: 100px;
-    }
-
-    footer .container .head .txtfooter a{
-        display: block;
-        margin: 7px 0;
-    }
 }
 
-@media (min-width:1000px) and (max-width:1400px){
-    footer .container .head .txtfooter a{
-        margin: 0px 15px;
-    }    
-}
-
-
-
-/************MOBILE*************/
-
-@media (max-width:700px){
-
-    /******HEADER********/    
+/*MOBILE*/
+@media (max-width:650px){    
     header{
         padding: 10px 15px;
-        width: 92vw;
-    }
-
-    .container{
-        padding: 30px;
     }
     header #menuHamburguer{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
-
     header .menu{
         position: absolute;
         display: flex;
@@ -55,11 +37,39 @@
         overflow: hidden;
         height: 100vh;
         padding-top: 60px;
-        background-color: var(--color-quaternary);
+        background-color: var(--color-tertiary);
         transition: all 0.5s ease;
     }
+}
 
-    /*********FOOTER*********/
+
+
+
+/**********FOOTER************/
+/*WEB*/
+@media(min-width:1420px){
+    footer .container .head .txtfooter a{
+        margin: 0px 50px;
+    }
+}
+
+@media(max-width:1420px){
+    footer .container .head .txtfooter a{
+        margin: 0px 25px;
+    }
+}
+
+/*TABLET*/
+
+@media(max-width:1110px){
+    footer .container .head .txtfooter a{
+        display: block;
+    }
+}
+
+/*MOBILE*/
+
+@media (max-width:650px){
     footer .container .head{
         border: none;
         padding: 0;
@@ -79,5 +89,5 @@
 
     footer .container .txtFooterMobile{
         display: flex;
-    }      
+    }   
 }
