--- a/page/css/pages/index.css
+++ b/page/css/pages/index.css
@@ -301,66 +301,24 @@ footer{
     background-color: var(--color-tertiary);
 }
 
-footer .container .head{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    padding: 20px 0px;
-    border-bottom: 2px solid var(--color-primary);
-}
-
-
-footer .container .head .txtfooter a{
-    text-decoration: none;
-    color: var(--color-quaternary);
-    font-weight: bolder;
-    transition: .5s;
-}
-
-footer .container .head .txtfooter a:hover{
-    color: var(--color-s);
-}
-
-footer .container .fbody{
+footer .container .social-icon{
     display: flex;
     justify-content: center;
-    width: 100%;
+    margin: 10px 0;
 }
 
-footer .container .fbody .icones{
-    display: flex;
+footer .container .social-icon p{
+    margin: 0px 10px;
 }
 
-footer .container .icon{
-    margin: 100px 20px;
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    background-color: var(--color-quaternary);
+footer .container .links{
+    margin: 30px 0;
+}
+
+footer .container .links a{
+    margin: 0px 20px;
 }
 
 footer .container p{
-    margin-top: 40px;
-    color: var(--color-quaternary);
-}
-
-footer .container .txtFooterMobile{
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-}
-
-footer .txtFooterMobile a{
-    margin: 25px 0px;
-    text-decoration: none;
-    color: var(--color-quaternary);
-    font-weight: bolder;
-}
-
-footer .txtFooterMobile .line{
-    margin: 0 auto;
-    height: 2px;
-    width: 30px;
-    background-color: var(--color-primary);
+    margin-top: 50px;
 }
