--- a/page/css/index.css
+++ b/page/css/index.css
@@ -39,9 +39,12 @@ header{
     background-color: var(--color-tertiary);
 }
 
+header .menu ul{
+    display: flex;
+}
 
-header .menu a{
-    text-decoration: none;
+header .menu ul li{
+    list-style: none;
     font-weight: bolder;
     color: var(--color-primary);
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.719);
@@ -53,7 +56,7 @@ header .menu a{
     width: 30%;
 }
 
-.ativado .menu a{
+.ativado .menu ul li{
     margin-top: 15px;
 
 }
@@ -116,6 +119,7 @@ header .menu a{
     margin-top: -80px;
     background-position: center;
     background-size: cover;
+    background-color: var(--color-tertiary);
     transition: 1s;
 }
 
@@ -130,101 +134,108 @@ header .menu a{
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.712);
 }
 
-
-
-/**********SECTION 2*********/
+/************SECTION 2*************/
 #section2{
+    background-color: var(--color-tertiary);
+}
+
+#section2 .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#section2 .container h1{
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+#section2 .container p{
+    margin-bottom: 25px;
+    max-width: 800px;
+    text-align: center;
+}
+
+
+#section3 .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#section3 .container .boxes{
+    display: flex;
+}
+
+#section3 .container .boxes .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 20px;
+    max-width: 280px;
+    height: 150px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.438);
+    background-color: var(--color-primary);
+    cursor: pointer;
+    transition: .5s;
+}
+
+#section3 .container .boxes .box:hover{
+    background-color: var(--color-primary-dark);
+}
+
+#section3 .container table{
+    min-width: 700px;
+    border-collapse: collapse;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
+}
+
+#section3 .container table thead{
+    background-color: var(--color-tertiary);
+}
+
+#section3 .container table td,
+#section3 .container table th{
+    padding: 5px;
+    text-align: center;
+}
+
+
+
+/**********SECTION 4*********/
+#section4{
     background-color: var(--color-tertiary);
 
 }
 
-#section2 h1{
+#section4 h1{
     margin-bottom: 50px;
     text-align: center;
 }
 
-#section2 .wrapper{
+#section4 .wrapper{
     display: flex;
     justify-content: space-around;
 }
 
 
-#section2 .wrapper .artigo .text{
+#section4 .wrapper .artigo .text{
     padding: 40px 0px;
     line-height: 30px;
     font-size: 1.2em;
     text-align: center;
 }
 
-#section2 .wrapper .artigo .text img{
+#section4 .wrapper .artigo .text img{
     width: 100px;
 }
 
-#section2 .wrapper .artigo h3,#section2 .wrapper .artigo p,#section2 .wrapper .artigo .button{
+#section4 .wrapper .artigo h3,#section4 .wrapper .artigo p,#section4 .wrapper .artigo .button{
     margin-bottom: 20px;
 }
-
-
-
-/***********SECTION 3***********/
-#section3 .containers{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 40vh;
-}
-
-#section3 .containers .box{
-    height: 100%;
-    width: 45%;
-    background-color: var(--color-tertiary);
-}
-
-
-#section3 .containers .txt{
-    width: 45%;
-    font-size: 1.2em;
-}
-
-#section3 .containers .txt p{
-    line-height: 30px;
-}
-
-#section3 .containers .txt h3{
-    margin-bottom: 20px;
-}
-
-
-
-/***********SECTION 4***********/
-#section4{
-    text-align: center;
-    background-color: var(--color-tertiary);
-}
-
-#section4 h1{
-    font-size: 1.5em;
-    margin-bottom: 40px;
-}
-
-#section4 p{
-    font-size: 1.5em;
-    margin-bottom: 80px;
-}
-
-#section4 .boxes{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-#section4 .boxes .minibox{
-    width: 150px;
-    height: 70px;
-    border-radius: 5px;
-    background-color: var(--color-quaternary);
-}
-
 
 
 /**********SECTION 5**********/
@@ -235,9 +246,11 @@ header .menu a{
 }
 
 #section5 .container p{
-    width: 50%;
     font-size: 1.2em;
     line-height: 30px;
+    max-width: 600px;
+    margin-bottom: 50px;
+
 }
 
 #section5 .formulario{
@@ -307,16 +320,25 @@ footer .container .social-icon{
     margin: 10px 0;
 }
 
-footer .container .social-icon p{
+footer .container .social-icon img{
     margin: 0px 10px;
+    width: 25px;
 }
+
 
 footer .container .links{
     margin: 30px 0;
 }
 
 footer .container .links a{
-    margin: 0px 20px;
+    padding: 20px;
+    color: var(--color-quaternary);
+    font-weight: bolder;
+    transition: .1s;
+}
+
+footer .container .links a:hover{
+    color: var(--color-secundary);
 }
 
 footer .container p{
