--- a/page/css/components/all.css
+++ b/page/css/components/all.css
@@ -4,6 +4,7 @@
     --color-secundary:white ;
     --color-tertiary:rgb(34, 33, 33);
     --color-quaternary:rgb(145, 143, 143);
+    --background-dark:rgba(12, 6, 6, 0.767);
 }
 
 
