--- a/page/css/index.css
+++ b/page/css/index.css
@@ -1,460 +1,9 @@
-@import url("../style.css");
-
-
-#btnscroll{
-    position: fixed;
-    bottom: 50px;
-    left: 40px;
-    width: 45px;
-    height: 45px;
-    border-radius: 100%;
-    cursor: pointer;
-    opacity: 0;
-    transition: .5s;
-    background-image: url("../assets/iconscroll.png");
-    background-size: cover;
-    background-color: var(--color-secundary);
-    border: 1px solid var(--color-secundary);
-    animation: jumping 1.5s infinite linear;
-}
-
-@keyframes jumping {
-    0%{transform: translateY(-15px);}
-    50%{transform: translateY(0px);}
-    100%{transform: translateY(-15px);}
-}
-
-
-
-/************HEADER*************/
-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: sticky;
-    z-index: 1;
-    top: 0%;
-    height: 60px;
-    transition: .5s;
-    background-color: var(--color-tertiary);
-}
-
-header .menu ul{
-    display: flex;
-}
-
-header .menu ul li{
-    list-style: none;
-    font-weight: bolder;
-    color: var(--color-primary);
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.719);
-    margin: 5px;
-    transition: .5s;
-}
-
-.ativado .menu {
-    width: 30%;
-}
-
-.ativado .menu ul li{
-    margin-top: 15px;
-
-}
-
-.inscricao{
-    display: flex;
-}
-
-.button{
-    margin: 5px;
-    padding: 10px 40px;
-    border-radius: 5px;
-    font-weight: bolder;
-    cursor: pointer;
-}
-
-
-#menuHamburguer{
-    display: none;
-    cursor: pointer;
-    width: 25px;
-    height: 25px;
-    position: relative;
-}
-
-#l1,#l2,#l3{
-    width: 100%;
-    height: 3px;
-    background-color: var(--color-primary);
-    transition: .3s;
-}
-
-.ativado #l1{
-    position: absolute;
-    top: 30%;
-    rotate: 50deg;
-    background-color: var(--color-secundary);
-}
-
-.ativado #l2{
-    position: absolute;
-    top: 30%;
-    height: 0px;
-    transition: 0.15s;
-}
-
-.ativado #l3{
-    position: absolute;
-    top: 30%;
-    rotate: -50deg;
-    background-color: var(--color-secundary);
-}
-
-
-/**********SECTION 1***********/
-#section1{
-    display: flex;
-    align-items: center;
-    height: 100vh;
-    margin-top: -80px;
-    background-position: center;
-    background-size: cover;
-    background-color: var(--color-tertiary);
-    transition: 1s;
-}
-
-#section1 .tema{
-    margin-left: 10%;
-    width:40%;  
-}
-
-.titulo{
-    font-weight: 100;
-    font-size: 3em;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.712);
-}
-
-/************SECTION 2*************/
-#section2{
-    background-color: var(--color-tertiary);
-}
-
-#section2 .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#section2 .container h1{
-    margin-bottom: 25px;
-    text-align: center;
-}
-
-#section2 .container p{
-    margin-bottom: 25px;
-    max-width: 800px;
-    text-align: center;
-}
-
-
-
-/************SECTION 3*************/
-#section3{
-    background-image: url("https://blconsultoriadigital.com.br/wp-content/uploads/2020/07/Imagem-Site-68.png");
-    background-size: cover;
-
-}
-#section3 .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgba(12, 6, 6, 0.767);
-}
-
-#section3 .container .boxes{
-    display: flex;
-}
-
-#section3 .container .boxes .box{
-    position: relative;
-    text-align: center;
-    overflow: hidden;
-    margin: 20px;
-    max-width: 280px;
-    height: 150px;
-    padding: 10px;
-    background: rgba(255, 255, 255, 0.01);
-    backdrop-filter: blur(3px);
-    -webkit-backdrop-filter: blur(3px);
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.438);
-    cursor: pointer;
-    transition: .5s;
-}
-
-#section3 .container .boxes .box span{
-    position: absolute;
-    display: block;
-}
-
-.box span:nth-child(1){
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: var(--color-primary);
-    animation: box-anim1 5s linear infinite;
-}
-
-@keyframes box-anim1 {
-    0%{
-        left: -100%;
-    }
-    50%, 100% {
-        left: 100%;
-    }
-}
-
-.box span:nth-child(2){
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: var(--color-primary);
-    animation: btn-anim2 5s linear infinite;
-}
-
-@keyframes box-anim2 {
-    0%{
-        top: -100%;
-    }
-    50%, 100%{
-        top: 100%;
-    }
-    
-}
-
-.box span:nth-child(3){
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: var(--color-primary);
-    animation: box-anim3 5s linear infinite;
-}
-
-@keyframes box-anim3 {
-    0%{
-        right: -100%;
-    }
-    50%,100%{
-        right: 100%;
-    }
-    
-}
-
-.box span:nth-child(4){
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: var(--color-primary);
-    animation: box-anim4 5s linear infinite;
-}
-
-@keyframes box-anim4 {
-    0%{
-        bottom: -100%;
-    }
-    50%, 100%{
-        bottom: 100%;
-    }  
-}
-
-#section3 .container .boxes .box .mini-box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    border: 1px solid var(--color-primary);
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.486);
-}
-
-.mini-box h3{
-    color: var(--color-primary-dark);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.425);
-}
-
-#section3 .container table{
-    min-width: 900px;
-    border-collapse: collapse;
-    background: rgba(255, 255, 255, 0.01);
-    backdrop-filter: blur(3px);
-    -webkit-backdrop-filter: blur(3px);
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
-}
-
-#section3 .container table thead{
-    background-color: rgba(0, 0, 0, 0.555);
-}
-
-#section3 .container table td,
-#section3 .container table th{
-    padding: 10px;
-    text-align: center;
-    border: 1px solid rgba(255, 255, 255, 0.384);
-}
-
-
-
-
-
-
-/**********SECTION 4*********/
-#section4{
-    background-color: var(--color-tertiary);
-
-}
-
-#section4 h1{
-    margin-bottom: 50px;
-    text-align: center;
-}
-
-#section4 .wrapper{
-    display: flex;
-    justify-content: space-around;
-}
-
-
-#section4 .wrapper .artigo .text{
-    padding: 40px 0px;
-    line-height: 30px;
-    font-size: 1.2em;
-    text-align: center;
-}
-
-#section4 .wrapper .artigo .text img{
-    width: 100px;
-}
-
-#section4 .wrapper .artigo h3,#section4 .wrapper .artigo p,#section4 .wrapper .artigo .button{
-    margin-bottom: 20px;
-}
-
-
-/**********SECTION 5**********/
-#section5 .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-#section5 .container p{
-    font-size: 1.2em;
-    line-height: 30px;
-    margin: 50px;
-
-}
-
-#section5 .formulario{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-#section5 .formulario h3{
-    margin-bottom: 25px;
-}
-
-#section5 .formulario #login-box{
-    display: flex;
-    justify-content: space-between;
-    height: 0;
-    width: 0;
-    border-bottom: 2px solid var(--color-primary);
-    overflow: hidden;
-    transition: .5s;
-}
-
-#section5 .formulario .user-box{
-    position: relative;
-    width: 20%;
-    height: 20%;
-}
-
-#section5 .formulario .user-box input{
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    color: #fff;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background: transparent;
-}
-
-#section5 .formulario .user-box label{
-    position: absolute;
-    top: 0;
-    left:0;
-    padding: 10px 0;
-    color: #fff;
-    pointer-events: none;
-    transition: .5s;
-}
-
-#section5 .formulario .user-box input:focus~label,#section5 .formulario .user-box input:valid~label{
-    top: -20px;
-    left: 0px; 
-    color: #ff0043;
-    font-size: 12px;
-}
-
-#section5 .formulario .button{
-    width: 200px;
-}
-
-
-
-/************FOOTER********/
-footer{
-    text-align: center;
-    background-color: var(--color-tertiary);
-}
-
-footer .container .social-icon{
-    display: flex;
-    justify-content: center;
-    margin: 10px 0;
-}
-
-footer .container .social-icon img{
-    margin: 0px 10px;
-    width: 25px;
-}
-
-
-footer .container .links{
-    margin: 30px 0;
-}
-
-footer .container .links a{
-    padding: 20px;
-    color: var(--color-quaternary);
-    font-weight: bolder;
-    transition: .1s;
-}
-
-footer .container .links a:hover{
-    color: var(--color-secundary);
-}
-
-footer .container p{
-    margin-top: 50px;
-}
+/*******ALL PAGES********/
+@import url("components/all.css");
+
+/**********RESPONSIVO*********/
+@import url("responsivo/responsivoindex.css");
+@import url("responsivo/responsivo.css");
+
+/************PAGES************/
+@import url("layout.css");
